--- a/DragonGame/DragonGame/MainWindow.xaml
+++ b/DragonGame/DragonGame/MainWindow.xaml
@@ -127,20 +127,20 @@
         <TabItem x:Name="map" Header="Mapa">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="151*"/>
-                    <ColumnDefinition Width="151*"/>
-                    <ColumnDefinition Width="151*"/>
-                    <ColumnDefinition Width="301*"/>
+                    <ColumnDefinition Width="189*"/>
+                    <ColumnDefinition Width="117*"/>
+                    <ColumnDefinition Width="127*"/>
+                    <ColumnDefinition Width="321*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="76*" />
+                    <RowDefinition Height="101*" />
+                    <RowDefinition Height="61*"/>
                 </Grid.RowDefinitions>
-                <Button Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="Reach_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="Reach_Explore_Click" />
-                <Button Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="WhiteRun_Explore" Content="Jít prozkoumat" Width="120" Margin="16,138,15,0" Click="WhiteRun_Explore_Click" />
-                <Button Grid.Column="3" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" x:Name="Rift_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="Rift_Explore_Click" />
-                <Button Grid.Column="4" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="WinterHold_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="WinterHold_Explore_Click"/>
+                <Button Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="Reach_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="Reach_Explore_Click" Margin="34,0,35,0" />
+                <Button Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="WhiteRun_Explore" Content="Jít prozkoumat" Width="120" Click="WhiteRun_Explore_Click" Height="20" Margin="2,91,5,91" />
+                <Button Grid.Column="3" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="Rift_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="Rift_Explore_Click" Margin="101,52,100,50" />
+                <Button Grid.Column="3" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="WinterHold_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="WinterHold_Explore_Click" Margin="101,66,100,66"/>
                 <Grid.Background>
                     <ImageBrush
                         ImageSource="Pictures/Backgrounds/Fight_Map.jpg"
@@ -156,6 +156,7 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -163,7 +164,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Image Grid.Column="1" Grid.Row="2"
+                <Image Grid.Column="1" Grid.Row="1"
                        gif:ImageBehavior.AnimatedSource="Pictures/Characters/Hunter_Girl.gif"
                        x:Name="InventoryCharacterPic"
                        Width="500"
@@ -177,7 +178,7 @@
                        gif:ImageBehavior.RepeatBehavior="Forever"
                        Grid.Column="2" Grid.Row="2"/>
                 <Label x:Name="AmmountOfGold" Grid.Column="3" Grid.Row="2" Content="" VerticalAlignment="Center" />
-                <TextBlock x:Name="PlayerStats" Grid.Column="1" Grid.Row="1" Text="" />
+                <TextBlock x:Name="PlayerStats" Grid.Column="1" Grid.Row="2" Text="" />
             </Grid>
         </TabItem>
         <TabItem x:Name="lore" Header="Děj">
