--- a/DragonGame/DragonGame/MainWindow.xaml
+++ b/DragonGame/DragonGame/MainWindow.xaml
@@ -124,31 +124,6 @@
                 </Grid.Background>
             </Grid>
         </TabItem>
-        <TabItem x:Name="map" Header="Mapa">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="189*"/>
-                    <ColumnDefinition Width="117*"/>
-                    <ColumnDefinition Width="127*"/>
-                    <ColumnDefinition Width="321*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="76*" />
-                    <RowDefinition Height="101*" />
-                    <RowDefinition Height="61*"/>
-                </Grid.RowDefinitions>
-                <Button Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="Reach_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="Reach_Explore_Click" Margin="34,0,35,0" />
-                <Button Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="WhiteRun_Explore" Content="Jít prozkoumat" Width="120" Click="WhiteRun_Explore_Click" Height="20" Margin="2,91,5,91" />
-                <Button Grid.Column="3" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="Rift_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="Rift_Explore_Click" Margin="101,52,100,50" />
-                <Button Grid.Column="3" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="WinterHold_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="WinterHold_Explore_Click" Margin="101,66,100,66"/>
-                <Grid.Background>
-                    <ImageBrush
-                        ImageSource="Pictures/Backgrounds/Fight_Map.jpg"
-                        Stretch="UniformToFill" />
-                </Grid.Background>
-
-            </Grid>
-        </TabItem>
         <TabItem x:Name="inv" Header="Inventář">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -285,6 +260,33 @@
                 <Button Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Content="Koupit 1x" Width="140" Height="20" x:Name="HealPotionBuy" Click="BuyHeal_Click"/>
                 <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="center" Content="Zpět do hry" Width="100" Height="20" x:Name="ReturnToGame" Click="ReturnGame_Click" />
                 <Label Width="120" x:Name="Gold" Content="Label" Grid.Column="0" Grid.Row="1"  HorizontalAlignment="Center" VerticalAlignment="Center" />
+            </Grid>
+        </TabItem>
+        <TabItem x:Name="map" Header="Mapa">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="189*"/>
+                    <ColumnDefinition Width="117*"/>
+                    <ColumnDefinition Width="127*"/>
+                    <ColumnDefinition Width="321*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="76*" />
+                    <RowDefinition Height="101*" />
+                    <RowDefinition Height="61*"/>
+                </Grid.RowDefinitions>
+                <Button Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="Reach_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="Reach_Explore_Click" Margin="34,0,35,0" />
+                <Button Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="WhiteRun_Explore" Content="Jít prozkoumat" Width="120" Click="WhiteRun_Explore_Click" Height="20" Margin="2,91,5,91" />
+                <Button Grid.Column="3" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="Rift_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="Rift_Explore_Click" Margin="101,52,100,50" />
+                <Button Grid.Column="3" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="WinterHold_Explore" Content="Jít prozkoumat" Width="120" Height="20" Click="WinterHold_Explore_Click" Margin="101,66,100,66"/>
+                <Button Grid.Column="0" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" x:Name="Map_Back" Content="Zpět do města" Width="120" Height="20" Click="Map_Back_Click"/>
+                <Button Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="Boss_Explore" Content="Jít zničit dračí doupě" Width="120" Height="20" Click="Boss_Explore_Click"/>
+                <Grid.Background>
+                    <ImageBrush
+                        ImageSource="Pictures/Backgrounds/Fight_Map.jpg"
+                        Stretch="UniformToFill" />
+                </Grid.Background>
+
             </Grid>
         </TabItem>
     </TabControl>
