--- a/DragonGame/DragonGame/MainWindow.xaml
+++ b/DragonGame/DragonGame/MainWindow.xaml
@@ -127,11 +127,11 @@
         <TabItem x:Name="inv" Header="Inventář">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="151*"/>
+                    <ColumnDefinition Width="151*"/>
+                    <ColumnDefinition Width="151*"/>
+                    <ColumnDefinition Width="221*"/>
+                    <ColumnDefinition Width="80*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -139,20 +139,27 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Image Grid.Column="1" Grid.Row="1"
+                <Image Grid.Column="0" Grid.Row="1"
                        gif:ImageBehavior.AnimatedSource="Pictures/Characters/Hunter_Girl.gif"
                        x:Name="InventoryCharacterPic"
-                       Width="500"
-                       gif:ImageBehavior.RepeatBehavior="Forever"/>
-                <Image x:Name="HealItem" Grid.Column="2" Grid.Row="0" Source="Pictures/Shop/Heal_Potion.png" />
-                <Image x:Name="ManaItem" Grid.Column="2" Grid.Row="1" Source="Pictures/Shop/Mana_Potion.png" />
-                <Label x:Name="HealItemNumber" Grid.Column="3" Grid.Row="0" Content="" VerticalAlignment="Center"/>
-                <Label x:Name="ManaItemNumber" Grid.Column="3" Grid.Row="1" Content="" VerticalAlignment="Center"/>
+                       gif:ImageBehavior.RepeatBehavior="Forever" Grid.ColumnSpan="4" Margin="0,0,47,0"/>
+                <Image x:Name="HealItem" Grid.Column="4" Grid.Row="0" Source="Pictures/Shop/Heal_Potion.png" Margin="12,24,12,25" />
+                <Image x:Name="ManaItem" Grid.Column="4" Grid.Row="1" Source="Pictures/Shop/Mana_Potion.png" Margin="12,25,12,24" />
+                <Label x:Name="HealItemNumber" Grid.Column="4" Grid.Row="0" Content="" VerticalAlignment="Bottom" Height="26"/>
+                <Label x:Name="ManaItemNumber" Grid.Column="4" Grid.Row="1" Content="" VerticalAlignment="Bottom" Height="26"/>
                 <Image gif:ImageBehavior.AnimatedSource="Pictures/Resources/Coin.gif"
-                       x:Name="CoinPic"
+                       x:Name="CoinPic"                      
                        gif:ImageBehavior.RepeatBehavior="Forever"
-                       Grid.Column="2" Grid.Row="2"/>
-                <Label x:Name="AmmountOfGold" Grid.Column="3" Grid.Row="2" Content="" VerticalAlignment="Center" />
+                       Grid.Column="4" Grid.Row="2" Margin="12,24,12,25"/>
+                <Label x:Name="AmmountOfGold" Grid.Column="4" Grid.Row="2" Content="" VerticalAlignment="Bottom" Height="26" />
+                
+                <Image x:Name="Head_Item" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" />
+                <Image x:Name="Body_Item" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" />
+                <Image x:Name="Left_Hand_Item" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" />
+                <Image x:Name="Right_Hand_Item" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" />
+                <Image x:Name="Trousers_Item" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" />
+                <Image x:Name="Boots_Item" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center" />
+                
                 <TextBlock x:Name="PlayerStats" Grid.Column="1" Grid.Row="2" Text="" />
             </Grid>
         </TabItem>
